# django-clickify

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: compatibility.yml
clickify/: decorators.py  drf_urls.py  models.py  urls.py  utils.py
clickify/migrations/: 0002_clicklog_ref_alter_trackedlink_target_url.py
tests/: test_drf_views.py  test_ref.py  test_views.py
