[tool.poetry]
name = "django-clickify"
version = "0.3.0"
description = "A Django app to track link clicks with rate limiting, IP filtering, and geolocation."
authors = ["Md Romjan Ali <romjanvr5@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/romjanxr/django-clickify"
repository = "https://github.com/romjanxr/django-clickify"
documentation = "https://github.com/romjanxr/django-clickify#readme"
keywords = ["django", "click", "tracker", "ratelimit", "ipfilter", "geolocation", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

packages = [
  { include = "clickify" }
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.2, <6"

[tool.poetry.extras]
# Optional dependencies for specific features
ratelimit = ["django-ratelimit"]
drf = ["djangorestframework"]
# Install both optional features
full = ["django-ratelimit", "djangorestframework"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-django = ">=4.5"
pytest-cov = ">=4.0"  # Add coverage support
isort = ">=5.10"
djangorestframework = "^3.16.1"
django-ratelimit = "^4.1.0"
ruff = "^0.12.11"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov=clickify --cov-report=html --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:django.core.cache.backends.filebased",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "migrations", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["F", "W", "I", "B", "D", "UP", "C4"]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic methods
    "D107", # missing docstring in __init__
    "D203", # conflict with D211
    "D213", # conflict with D212
    "D400", # docstring first line should end with period
    "D401", # first line should be imperative
    "D415", # first line should end with ., ?, or !
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"*/migrations/*" = ["D"]

[tool.coverage.run]
source = ["clickify"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
